--- a/new_tdx/T0002/user.ini
+++ b/new_tdx/T0002/user.ini
@@ -5,10 +5,10 @@ FavUseZb00=T01
 FavUseZb00_01=VOL-TDX
 FxtTabSel=1
 
-TdxUseCount=14
+TdxUseCount=123
 NetCondition=1
 StartTips=0
-TipFilePos=14
+TipFilePos=123
 bTreeShow=0
 bDrawToolBarShow=0
 bRestShow=0
@@ -33,8 +33,8 @@ QRParam4=20
 QRParam5=60
 BigFontGrid=0
 OnlyTodayMinLine=0
-HQX=1127
-HQY=706
+HQX=1208
+HQY=724
 HQMINIMIZE=0
 MainZb=0
 RealUPK=0
@@ -64,8 +64,8 @@ BlockCache=1
 BlockToHead=0
 CheckUrgentDate=0
 CheckUrgent=0
-DrawToolPos_x=870
-DrawToolPos_y=227
+DrawToolPos_x=375
+DrawToolPos_y=63
 HasIFAxis=0
 XHidden=0
 YHidden=1
@@ -74,8 +74,8 @@ MultiChartZb=VOL-TDX
 LastKLine=
 LastExp=
 FavUseZb01=T03
-FavUseZb02=KDJ
-FavUseZb03=CCI
+FavUseZb02=SUPV
+FavUseZb03=SUPH
 FavUseZb04=DMI
 FavUseZb05=DMA
 FavUseZb06=TRIX
@@ -664,7 +664,7 @@ StatusGP2_2_Code=000300
 StatusGP3_2_Code=399006
 StatusBarShowZCJ=0
 LockStartDate=0
-LastIsMaximize=0
+LastIsMaximize=1
 SaveMainRect_Left=0
 SaveMainRect_Top=0
 SaveMainRect_Right=0
@@ -731,7 +731,7 @@ FilterCJVol=0
 FilterPF=0.00
 BeepFromTick2=1
 [Info]
-LastIP=119.147.212.81
+LastIP=222.73.49.4
 LastTdxInfoLen=0
 zxcompanynum=2
 companyid_01=0
@@ -755,3 +755,13 @@ dJiangEnStart=1
 dJiangEnStep=1
 nDateStep=1
 dPriceStep=0.1
+[HisDlg]
+left=202
+top=418
+[Export]
+ExportPath=E:\gs\new_tdx\T0002\export
+FileNameRule=YY#XXXXXX.txt
+WhichDataRule=1
+WhichSeparator=2
+MakeTitle=1
+TQ=1
