--- a/new_tdx/T0002/user.ini
+++ b/new_tdx/T0002/user.ini
@@ -2,13 +2,13 @@
 bToolBarShow=0
 ToolBarPos=1
 FavUseZb00=T01
-FavUseZb00_01=VOL-TDX
+FavUseZb00_01=T01
 FxtTabSel=1
 
-TdxUseCount=123
+TdxUseCount=142
 NetCondition=1
 StartTips=0
-TipFilePos=123
+TipFilePos=142
 bTreeShow=0
 bDrawToolBarShow=0
 bRestShow=0
@@ -33,8 +33,8 @@ QRParam4=20
 QRParam5=60
 BigFontGrid=0
 OnlyTodayMinLine=0
-HQX=1208
-HQY=724
+HQX=-3
+HQY=69
 HQMINIMIZE=0
 MainZb=0
 RealUPK=0
@@ -64,8 +64,8 @@ BlockCache=1
 BlockToHead=0
 CheckUrgentDate=0
 CheckUrgent=0
-DrawToolPos_x=375
-DrawToolPos_y=63
+DrawToolPos_x=845
+DrawToolPos_y=202
 HasIFAxis=0
 XHidden=0
 YHidden=1
@@ -74,7 +74,7 @@ MultiChartZb=VOL-TDX
 LastKLine=
 LastExp=
 FavUseZb01=T03
-FavUseZb02=SUPV
+FavUseZb02=T04
 FavUseZb03=SUPH
 FavUseZb04=DMI
 FavUseZb05=DMA
@@ -99,7 +99,7 @@ FavUseZb07_01=CR
 FavUseZb08_01=VR
 FavUseZb09_01=OBV
 FavUseZb10_01=ASI
-ZBWINNUM_01=3
+ZBWINNUM_01=1
 BigVol_01=500
 FirstChartZb_02=MA
 MultiChartZb_02=VOL
@@ -731,7 +731,7 @@ FilterCJVol=0
 FilterPF=0.00
 BeepFromTick2=1
 [Info]
-LastIP=222.73.49.4
+LastIP=
 LastTdxInfoLen=0
 zxcompanynum=2
 companyid_01=0
@@ -756,8 +756,8 @@ dJiangEnStep=1
 nDateStep=1
 dPriceStep=0.1
 [HisDlg]
-left=202
-top=418
+left=210
+top=366
 [Export]
 ExportPath=E:\gs\new_tdx\T0002\export
 FileNameRule=YY#XXXXXX.txt
