--- a/new_tdx/T0002/user.ini
+++ b/new_tdx/T0002/user.ini
@@ -5,10 +5,10 @@ FavUseZb00=T01
 FavUseZb00_01=T01
 FxtTabSel=1
 
-TdxUseCount=142
+TdxUseCount=143
 NetCondition=1
 StartTips=0
-TipFilePos=142
+TipFilePos=143
 bTreeShow=0
 bDrawToolBarShow=0
 bRestShow=0
@@ -33,8 +33,8 @@ QRParam4=20
 QRParam5=60
 BigFontGrid=0
 OnlyTodayMinLine=0
-HQX=-3
-HQY=69
+HQX=-35
+HQY=77
 HQMINIMIZE=0
 MainZb=0
 RealUPK=0
@@ -731,7 +731,7 @@ FilterCJVol=0
 FilterPF=0.00
 BeepFromTick2=1
 [Info]
-LastIP=
+LastIP=222.73.49.4
 LastTdxInfoLen=0
 zxcompanynum=2
 companyid_01=0
