--- a/new_tdx/T0002/user.ini
+++ b/new_tdx/T0002/user.ini
@@ -3,12 +3,12 @@ bToolBarShow=0
 ToolBarPos=1
 FavUseZb00=T01
 FavUseZb00_01=T01
-FxtTabSel=1
+FxtTabSel=0
 
-TdxUseCount=143
+TdxUseCount=154
 NetCondition=1
 StartTips=0
-TipFilePos=143
+TipFilePos=154
 bTreeShow=0
 bDrawToolBarShow=0
 bRestShow=0
@@ -33,8 +33,8 @@ QRParam4=20
 QRParam5=60
 BigFontGrid=0
 OnlyTodayMinLine=0
-HQX=-35
-HQY=77
+HQX=1072
+HQY=45
 HQMINIMIZE=0
 MainZb=0
 RealUPK=0
@@ -74,8 +74,8 @@ MultiChartZb=VOL-TDX
 LastKLine=
 LastExp=
 FavUseZb01=T03
-FavUseZb02=T04
-FavUseZb03=SUPH
+FavUseZb02=ZJQDL
+FavUseZb03=DMA
 FavUseZb04=DMI
 FavUseZb05=DMA
 FavUseZb06=TRIX
@@ -99,7 +99,7 @@ FavUseZb07_01=CR
 FavUseZb08_01=VR
 FavUseZb09_01=OBV
 FavUseZb10_01=ASI
-ZBWINNUM_01=1
+ZBWINNUM_01=2
 BigVol_01=500
 FirstChartZb_02=MA
 MultiChartZb_02=VOL
@@ -475,7 +475,7 @@ TjWarnSwitch=0
 NotifyDownLoad=0
 DownAllABGp=1
 MoreDSSel=0
-Day_WriteDisk=0
+Day_WriteDisk=1
 AutoHideToolBar=0
 DrawBlue=1
 LongHighLine=1
@@ -553,7 +553,7 @@ OutBarIsExpand=1
 MoreSel00=0
 ZstMoreShow00=0
 FxtMoreShow00=0
-ZstStyleSel00=0
+ZstStyleSel00=4
 MoreSel01=0
 ZstMoreShow01=0
 FxtMoreShow01=0
@@ -731,7 +731,7 @@ FilterCJVol=0
 FilterPF=0.00
 BeepFromTick2=1
 [Info]
-LastIP=222.73.49.4
+LastIP=59.173.18.77
 LastTdxInfoLen=0
 zxcompanynum=2
 companyid_01=0
@@ -756,8 +756,8 @@ dJiangEnStep=1
 nDateStep=1
 dPriceStep=0.1
 [HisDlg]
-left=210
-top=366
+left=248
+top=357
 [Export]
 ExportPath=E:\gs\new_tdx\T0002\export
 FileNameRule=YY#XXXXXX.txt
